src/main/metadata/objects/Service_History__c.object
<CustomObject>
    <description>Custom Object to maintain Service Contract Details. CMS to Salesforce integration and field mapping, interface details and additional fields to be created in this Object.</description>
    <fields>
        <fullName>Branch_Code__c</fullName>
        <label>Branch Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fleet__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fleet</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MD__c</fullName>
        <label>MD</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <defaultValue>IF(ISPICKVAL($User.Market__c, 'VN') ,'VN', 
IF(ISPICKVAL($User.Market__c, 'ID'), 'ID', 
IF(ISPICKVAL($User.Market__c, 'SG'), 'SG', 
IF(ISPICKVAL($User.Market__c, 'RO'), 'RO', 
IF(ISPICKVAL($User.Market__c, 'HU'), 'HU', 
IF(ISPICKVAL($User.Market__c, 'SK'), 'SK', 
IF(ISPICKVAL($User.Market__c, 'AR') ,'AR',
IF(ISPICKVAL($User.Market__c, 'CO'), 'CO',
IF(ISPICKVAL($User.Market__c, 'EG'), 'EG','')))))))))</defaultValue>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>VN</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>SG</fullName>
                </value>
                <value>
                    <fullName>RO</fullName>
                </value>
                <value>
                    <fullName>HU</fullName>
                </value>
                <value>
                    <fullName>SK</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>EG</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Model__c</fullName>
        <label>Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_Used__c</fullName>
        <label>New/Used Car</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Used</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Origin__c</fullName>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Contact</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Retail Tasks (Service Contact)</relationshipLabel>
        <relationshipName>Service_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Dealer</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2</booleanFilter>
            <filterItems>
                <field>Account.RecordTypeId</field>
                <operation>equals</operation>
                <value>Dealer</value>
            </filterItems>
            <filterItems>
                <field>$Profile.Name</field>
                <operation>equals</operation>
                <value>IntegrationAPI</value>
            </filterItems>
            <infoMessage>Please select the proper dealer account.</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service History (Related Dealer)</relationshipLabel>
        <relationshipName>Service_History1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Service History</relationshipLabel>
        <relationshipName>Service_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Retail_CreatedDate__c</fullName>
        <label>Retail CreatedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Retail_LastModifiedDate__c</fullName>
        <label>Retail LastModifiedDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Dealer Employee</fullName>
                </value>
                <value>
                    <fullName>MB Group Employee</fullName>
                </value>
                <value>
                    <fullName>Demo Car</fullName>
                </value>
                <value>
                    <fullName>Company Car</fullName>
                </value>
                <value>
                    <fullName>Courtesy Car</fullName>
                </value>
                <value>
                    <fullName>Rent-a-Car</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sector__c</fullName>
        <label>Sector</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vehicle Sales</fullName>
                </value>
                <value>
                    <fullName>Service</fullName>
                </value>
                <value>
                    <fullName>Parts</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Code__c</fullName>
        <label>Service Code</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Market__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Service Maintenance</fullName>
                </value>
                <value>
                    <fullName>General Repair</fullName>
                </value>
                <value>
                    <fullName>Test Jobs</fullName>
                </value>
                <value>
                    <fullName>Electrical Jobs</fullName>
                </value>
                <value>
                    <fullName>Body Jobs</fullName>
                </value>
                <value>
                    <fullName>Paint Jobs</fullName>
                </value>
                <value>
                    <fullName>Other Jobs</fullName>
                </value>
                <value>
                    <fullName>Wear &amp; Tear Jobs</fullName>
                </value>
                <value>
                    <fullName>Predelivery inspection</fullName>
                </value>
                <value>
                    <fullName>Return Jobs</fullName>
                </value>
                <value>
                    <fullName>Service Contract</fullName>
                </value>
                <value>
                    <fullName>Warranty</fullName>
                </value>
                <value>
                    <fullName>New car/used car sales</fullName>
                </value>
                <value>
                    <fullName>Free</fullName>
                </value>
                <value>
                    <fullName>Used car purchase</fullName>
                </value>
                <value>
                    <fullName>1year inspection</fullName>
                </value>
                <value>
                    <fullName>MOT</fullName>
                </value>
                <value>
                    <fullName>MB Safety check</fullName>
                </value>
                <value>
                    <fullName>Dealer Campaign</fullName>
                </value>
                <value>
                    <fullName>Outside Order</fullName>
                </value>
                <value>
                    <fullName>Re-Repair</fullName>
                </value>
                <value>
                    <fullName>Quick Service</fullName>
                </value>
                <value>
                    <fullName>Service Transfer</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>MB 1year inspection</fullName>
                </value>
                <value>
                    <fullName>First MOT</fullName>
                </value>
                <value>
                    <fullName>Not selected</fullName>
                </value>
                <value>
                    <fullName>Blank</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Service_Currency__c</fullName>
        <label>Service Currency</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Date_In__c</fullName>
        <label>Service Date In</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Date_Out__c</fullName>
        <label>Service Date Out</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Dealer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Service History (Service Dealer)</relationshipLabel>
        <relationshipName>Service_History2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Service_Details__c</fullName>
        <label>Service Details</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Invoice_Number__c</fullName>
        <label>Service Invoice Number</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Mileage__c</fullName>
        <label>Current Mileage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Number__c</fullName>
        <label>Service Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Parts_Amount__c</fullName>
        <label>Service Parts Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Total_Amount__c</fullName>
        <label>Service Total Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Vehicle_VIN__c</fullName>
        <formula>Service_Vehicle__r.EuroVIN__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Vehicle VIN</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Service_Vehicle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Vehicle</label>
        <referenceTo>Vehicle__c</referenceTo>
        <relationshipLabel>Service History</relationshipLabel>
        <relationshipName>Service_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vehicle_Registration_No__c</fullName>
        <label>Vehicle Registration No</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Service History</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service History</pluralLabel>
    <recordTypes>
        <fullName>Service</fullName>
        <active>true</active>
        <label>Service</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>